grammar/BenLangParser.py
# Generated from BenLang.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class BenLangParser ( Parser ):

    grammarFileName = "BenLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "<INVALID>", "<INVALID>", "'\"'", 
                     "'\\'", "'bool'", "'int'", "'string'", "'while'", "'}'", 
                     "'{'", "'else'", "'if'", "'<'", "'=='", "'!'", "'||'", 
                     "'&&'", "'false'", "'true'", "<INVALID>", "'('", "')'", 
                     "<INVALID>", "'+'", "'-'", "'/'", "'*'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "EQUALS", "STRING", "ESCAPE_CHAR", "QUOT", 
                      "BACKSLASH", "BOOL_TYPE", "INT_TYPE", "STRING_TYPE", 
                      "WHILE", "RMOUSTACHE", "LMOUSTACHE", "ELSE", "IF", 
                      "OP_LT", "OP_EQ", "OP_NOT", "OP_OR", "OP_AND", "FALSE", 
                      "TRUE", "IDENTIFIER", "LBRACKET", "RBRACKET", "INTEGER", 
                      "PLUS", "MINUS", "DIV", "MULT", "COMMA", "SEMICOLON", 
                      "PLUSMINUS", "WS", "STRING_CHAR", "UNICODE", "ESCAPE" ]

    RULE_statement = 0
    RULE_statementBlock = 1
    RULE_prog = 2
    RULE_aType = 3
    RULE_declaration = 4
    RULE_assignment = 5
    RULE_whileLoop = 6
    RULE_ifElse = 7
    RULE_ifOnly = 8
    RULE_expr = 9
    RULE_application = 10
    RULE_params = 11
    RULE_paramsRest = 12

    ruleNames =  [ "statement", "statementBlock", "prog", "aType", "declaration", 
                   "assignment", "whileLoop", "ifElse", "ifOnly", "expr", 
                   "application", "params", "paramsRest" ]

    EOF = Token.EOF
    EQUALS=1
    STRING=2
    ESCAPE_CHAR=3
    QUOT=4
    BACKSLASH=5
    BOOL_TYPE=6
    INT_TYPE=7
    STRING_TYPE=8
    WHILE=9
    RMOUSTACHE=10
    LMOUSTACHE=11
    ELSE=12
    IF=13
    OP_LT=14
    OP_EQ=15
    OP_NOT=16
    OP_OR=17
    OP_AND=18
    FALSE=19
    TRUE=20
    IDENTIFIER=21
    LBRACKET=22
    RBRACKET=23
    INTEGER=24
    PLUS=25
    MINUS=26
    DIV=27
    MULT=28
    COMMA=29
    SEMICOLON=30
    PLUSMINUS=31
    WS=32
    STRING_CHAR=33
    UNICODE=34
    ESCAPE=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BenLangParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(BenLangParser.SEMICOLON, 0)

        def ifOnly(self):
            return self.getTypedRuleContext(BenLangParser.IfOnlyContext,0)


        def ifElse(self):
            return self.getTypedRuleContext(BenLangParser.IfElseContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(BenLangParser.WhileLoopContext,0)


        def declaration(self):
            return self.getTypedRuleContext(BenLangParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(BenLangParser.AssignmentContext,0)


        def getRuleIndex(self):
            return BenLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BenLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statement)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.expr(0)
                self.state = 27
                self.match(BenLangParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.ifOnly()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.ifElse()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 31
                self.whileLoop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 32
                self.declaration()
                self.state = 33
                self.match(BenLangParser.SEMICOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 35
                self.assignment()
                self.state = 36
                self.match(BenLangParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BenLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(BenLangParser.StatementContext,i)


        def getRuleIndex(self):
            return BenLangParser.RULE_statementBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementBlock" ):
                listener.enterStatementBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementBlock" ):
                listener.exitStatementBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementBlock" ):
                return visitor.visitStatementBlock(self)
            else:
                return visitor.visitChildren(self)




    def statementBlock(self):

        localctx = BenLangParser.StatementBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BenLangParser.STRING) | (1 << BenLangParser.BOOL_TYPE) | (1 << BenLangParser.INT_TYPE) | (1 << BenLangParser.STRING_TYPE) | (1 << BenLangParser.WHILE) | (1 << BenLangParser.IF) | (1 << BenLangParser.OP_NOT) | (1 << BenLangParser.FALSE) | (1 << BenLangParser.TRUE) | (1 << BenLangParser.IDENTIFIER) | (1 << BenLangParser.LBRACKET) | (1 << BenLangParser.INTEGER) | (1 << BenLangParser.PLUS) | (1 << BenLangParser.MINUS))) != 0):
                self.state = 40
                self.statement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementBlock(self):
            return self.getTypedRuleContext(BenLangParser.StatementBlockContext,0)


        def getRuleIndex(self):
            return BenLangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = BenLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.statementBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ATypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL_TYPE(self):
            return self.getToken(BenLangParser.BOOL_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(BenLangParser.STRING_TYPE, 0)

        def INT_TYPE(self):
            return self.getToken(BenLangParser.INT_TYPE, 0)

        def getRuleIndex(self):
            return BenLangParser.RULE_aType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAType" ):
                listener.enterAType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAType" ):
                listener.exitAType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAType" ):
                return visitor.visitAType(self)
            else:
                return visitor.visitChildren(self)




    def aType(self):

        localctx = BenLangParser.ATypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_aType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BenLangParser.BOOL_TYPE) | (1 << BenLangParser.INT_TYPE) | (1 << BenLangParser.STRING_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aType(self):
            return self.getTypedRuleContext(BenLangParser.ATypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(BenLangParser.IDENTIFIER, 0)

        def EQUALS(self):
            return self.getToken(BenLangParser.EQUALS, 0)

        def expr(self):
            return self.getTypedRuleContext(BenLangParser.ExprContext,0)


        def getRuleIndex(self):
            return BenLangParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = BenLangParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.aType()
            self.state = 51
            self.match(BenLangParser.IDENTIFIER)
            self.state = 52
            self.match(BenLangParser.EQUALS)
            self.state = 53
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BenLangParser.IDENTIFIER, 0)

        def EQUALS(self):
            return self.getToken(BenLangParser.EQUALS, 0)

        def expr(self):
            return self.getTypedRuleContext(BenLangParser.ExprContext,0)


        def getRuleIndex(self):
            return BenLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = BenLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(BenLangParser.IDENTIFIER)
            self.state = 56
            self.match(BenLangParser.EQUALS)
            self.state = 57
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileLoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(BenLangParser.WHILE, 0)

        def LBRACKET(self):
            return self.getToken(BenLangParser.LBRACKET, 0)

        def expr(self):
            return self.getTypedRuleContext(BenLangParser.ExprContext,0)


        def RBRACKET(self):
            return self.getToken(BenLangParser.RBRACKET, 0)

        def LMOUSTACHE(self):
            return self.getToken(BenLangParser.LMOUSTACHE, 0)

        def statementBlock(self):
            return self.getTypedRuleContext(BenLangParser.StatementBlockContext,0)


        def RMOUSTACHE(self):
            return self.getToken(BenLangParser.RMOUSTACHE, 0)

        def getRuleIndex(self):
            return BenLangParser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileLoop" ):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)




    def whileLoop(self):

        localctx = BenLangParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(BenLangParser.WHILE)
            self.state = 60
            self.match(BenLangParser.LBRACKET)
            self.state = 61
            self.expr(0)
            self.state = 62
            self.match(BenLangParser.RBRACKET)
            self.state = 63
            self.match(BenLangParser.LMOUSTACHE)
            self.state = 64
            self.statementBlock()
            self.state = 65
            self.match(BenLangParser.RMOUSTACHE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfElseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BenLangParser.IF, 0)

        def LBRACKET(self):
            return self.getToken(BenLangParser.LBRACKET, 0)

        def expr(self):
            return self.getTypedRuleContext(BenLangParser.ExprContext,0)


        def RBRACKET(self):
            return self.getToken(BenLangParser.RBRACKET, 0)

        def LMOUSTACHE(self, i:int=None):
            if i is None:
                return self.getTokens(BenLangParser.LMOUSTACHE)
            else:
                return self.getToken(BenLangParser.LMOUSTACHE, i)

        def statementBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BenLangParser.StatementBlockContext)
            else:
                return self.getTypedRuleContext(BenLangParser.StatementBlockContext,i)


        def RMOUSTACHE(self, i:int=None):
            if i is None:
                return self.getTokens(BenLangParser.RMOUSTACHE)
            else:
                return self.getToken(BenLangParser.RMOUSTACHE, i)

        def ELSE(self):
            return self.getToken(BenLangParser.ELSE, 0)

        def getRuleIndex(self):
            return BenLangParser.RULE_ifElse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElse" ):
                listener.enterIfElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElse" ):
                listener.exitIfElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElse" ):
                return visitor.visitIfElse(self)
            else:
                return visitor.visitChildren(self)




    def ifElse(self):

        localctx = BenLangParser.IfElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifElse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(BenLangParser.IF)
            self.state = 68
            self.match(BenLangParser.LBRACKET)
            self.state = 69
            self.expr(0)
            self.state = 70
            self.match(BenLangParser.RBRACKET)
            self.state = 71
            self.match(BenLangParser.LMOUSTACHE)
            self.state = 72
            self.statementBlock()
            self.state = 73
            self.match(BenLangParser.RMOUSTACHE)
            self.state = 74
            self.match(BenLangParser.ELSE)
            self.state = 75
            self.match(BenLangParser.LMOUSTACHE)
            self.state = 76
            self.statementBlock()
            self.state = 77
            self.match(BenLangParser.RMOUSTACHE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfOnlyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BenLangParser.IF, 0)

        def LBRACKET(self):
            return self.getToken(BenLangParser.LBRACKET, 0)

        def expr(self):
            return self.getTypedRuleContext(BenLangParser.ExprContext,0)


        def RBRACKET(self):
            return self.getToken(BenLangParser.RBRACKET, 0)

        def LMOUSTACHE(self):
            return self.getToken(BenLangParser.LMOUSTACHE, 0)

        def statementBlock(self):
            return self.getTypedRuleContext(BenLangParser.StatementBlockContext,0)


        def RMOUSTACHE(self):
            return self.getToken(BenLangParser.RMOUSTACHE, 0)

        def getRuleIndex(self):
            return BenLangParser.RULE_ifOnly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfOnly" ):
                listener.enterIfOnly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfOnly" ):
                listener.exitIfOnly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfOnly" ):
                return visitor.visitIfOnly(self)
            else:
                return visitor.visitChildren(self)




    def ifOnly(self):

        localctx = BenLangParser.IfOnlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifOnly)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(BenLangParser.IF)
            self.state = 80
            self.match(BenLangParser.LBRACKET)
            self.state = 81
            self.expr(0)
            self.state = 82
            self.match(BenLangParser.RBRACKET)
            self.state = 83
            self.match(BenLangParser.LMOUSTACHE)
            self.state = 84
            self.statementBlock()
            self.state = 85
            self.match(BenLangParser.RMOUSTACHE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(BenLangParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(BenLangParser.FALSE, 0)

        def IDENTIFIER(self):
            return self.getToken(BenLangParser.IDENTIFIER, 0)

        def application(self):
            return self.getTypedRuleContext(BenLangParser.ApplicationContext,0)


        def INTEGER(self):
            return self.getToken(BenLangParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(BenLangParser.STRING, 0)

        def OP_NOT(self):
            return self.getToken(BenLangParser.OP_NOT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BenLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(BenLangParser.ExprContext,i)


        def PLUS(self):
            return self.getToken(BenLangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(BenLangParser.MINUS, 0)

        def LBRACKET(self):
            return self.getToken(BenLangParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(BenLangParser.RBRACKET, 0)

        def OP_LT(self):
            return self.getToken(BenLangParser.OP_LT, 0)

        def OP_EQ(self):
            return self.getToken(BenLangParser.OP_EQ, 0)

        def OP_AND(self):
            return self.getToken(BenLangParser.OP_AND, 0)

        def OP_OR(self):
            return self.getToken(BenLangParser.OP_OR, 0)

        def getRuleIndex(self):
            return BenLangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BenLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 88
                self.match(BenLangParser.TRUE)
                pass

            elif la_ == 2:
                self.state = 89
                self.match(BenLangParser.FALSE)
                pass

            elif la_ == 3:
                self.state = 90
                self.match(BenLangParser.IDENTIFIER)
                pass

            elif la_ == 4:
                self.state = 91
                self.application()
                pass

            elif la_ == 5:
                self.state = 92
                self.match(BenLangParser.INTEGER)
                pass

            elif la_ == 6:
                self.state = 93
                self.match(BenLangParser.STRING)
                pass

            elif la_ == 7:
                self.state = 94
                self.match(BenLangParser.OP_NOT)
                self.state = 95
                self.expr(12)
                pass

            elif la_ == 8:
                self.state = 96
                self.match(BenLangParser.PLUS)
                self.state = 97
                self.expr(11)
                pass

            elif la_ == 9:
                self.state = 98
                self.match(BenLangParser.MINUS)
                self.state = 99
                self.expr(10)
                pass

            elif la_ == 10:
                self.state = 100
                self.match(BenLangParser.LBRACKET)
                self.state = 101
                self.expr(0)
                self.state = 102
                self.match(BenLangParser.RBRACKET)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 130
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = BenLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 106
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 107
                        self.match(BenLangParser.MULT)
                        self.state = 108
                        self.expr(9)
                        pass

                    elif la_ == 2:
                        localctx = BenLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 109
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 110
                        self.match(BenLangParser.DIV)
                        self.state = 111
                        self.expr(8)
                        pass

                    elif la_ == 3:
                        localctx = BenLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 112
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 113
                        self.match(BenLangParser.PLUS)
                        self.state = 114
                        self.expr(7)
                        pass

                    elif la_ == 4:
                        localctx = BenLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 115
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 116
                        self.match(BenLangParser.MINUS)
                        self.state = 117
                        self.expr(6)
                        pass

                    elif la_ == 5:
                        localctx = BenLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 118
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 119
                        self.match(BenLangParser.OP_LT)
                        self.state = 120
                        self.expr(5)
                        pass

                    elif la_ == 6:
                        localctx = BenLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 121
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 122
                        self.match(BenLangParser.OP_EQ)
                        self.state = 123
                        self.expr(4)
                        pass

                    elif la_ == 7:
                        localctx = BenLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 124
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 125
                        self.match(BenLangParser.OP_AND)
                        self.state = 126
                        self.expr(3)
                        pass

                    elif la_ == 8:
                        localctx = BenLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 127
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 128
                        self.match(BenLangParser.OP_OR)
                        self.state = 129
                        self.expr(2)
                        pass

             
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ApplicationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BenLangParser.IDENTIFIER, 0)

        def params(self):
            return self.getTypedRuleContext(BenLangParser.ParamsContext,0)


        def getRuleIndex(self):
            return BenLangParser.RULE_application

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApplication" ):
                listener.enterApplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApplication" ):
                listener.exitApplication(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApplication" ):
                return visitor.visitApplication(self)
            else:
                return visitor.visitChildren(self)




    def application(self):
